<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.matej.runrepstracker.AboutActivity">

    <TextView
        android:id="@+id/AboutAppTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textColor="@color/apptextcolor"
        android:textSize="@dimen/size_of_app_title"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/AboutPushUpTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_pushup"
        android:textAlignment="center"
        android:textColor="@color/apptextcolor"
        android:textSize="@dimen/size_of_app_title"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/AboutSitUpTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_situp"
        android:textAlignment="center"
        android:textColor="@color/apptextcolor"
        android:textSize="@dimen/size_of_app_title"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/AboutRunTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_run"
        android:textAlignment="center"
        android:textColor="@color/apptextcolor"
        android:textSize="@dimen/size_of_app_title"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/AboutResultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_result"
        android:textAlignment="center"
        android:textColor="@color/apptextcolor"
        android:textSize="@dimen/size_of_app_title"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
</LinearLayout>
</ScrollView>
